--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -1,10 +1,92 @@
 <h1>
   Movie #<%= @the_movie.id %> details
 </h1>
-
+<div>
 <a href="/movies">
   Go back
 </a>
+</div>
+<div>
+<a href="/delete_movie/<%= @the_movie.id %>">
+  Delete movie
+</a>
+</div>
+
+<hr>
+<form action="/update_movie/<%= @the_movie.id %>" method="post">
+  <div>
+    <label for="movie_title">
+      Title
+    </label>
+    <input 
+      id="movie_title" 
+      name="user_input_movie_title" 
+      type="text" 
+      value= <%= @the_movie.title %>>
+  </div>
+
+  <div>
+    <label for="movie_year">
+      Year
+    </label>
+    <input 
+      id="movie_year" 
+      name="user_input_movie_year" 
+      type="int"
+      value= <%= @the_movie.year %>>
+    >
+  </div>
+
+  <div>
+    <label for="movie_duration">
+      Duration
+    </label>
+    <input 
+      id="movie_duration" 
+      name="user_input_movie_duration" 
+      type="int"
+      value= <%= @the_movie.duration %>>
+    >
+  </div>
+
+  <div>
+    <label for="movie_desc">
+      Description
+    </label>
+    <input 
+      id="movie_desc" 
+      name="user_input_movie_desc" 
+      type="text"
+      value= <%= @the_movie.description %>>
+    >
+  </div>
+
+  <div>
+    <label for="movie_image">
+      Image
+    </label>
+    <input 
+      id="movie_image" 
+      name="user_input_movie_image" 
+      type="text"
+      value= <%= @the_movie.image %>>
+    >
+  </div>
+
+  <div>
+    <label for="movie_director_id">
+      Director ID
+    </label>
+    <input 
+      id="movie_director_id" 
+      name="user_input_movie_director_id" 
+      type="int"
+      value= <%= @the_movie.director_id %>>
+    >
+  </div>
+
+  <button>Update movie</button>
+</form>
 
 <hr>
 
